user-service/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-microservice
spec:
  selector:
    app: java-microservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
