user-service/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-microservice
spec:
  to:
    kind: Service
    name: java-microservice
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
